tests/neg/t5702-neg-bad-and-wild.check
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:10:22 ---------------------------------------------------
10 |      case List(1, _*,) => // error: pattern expected
   |                      ^
   |                      pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:12:23 ---------------------------------------------------
12 |      case List(1, _*3,) => // error: pattern expected // error
   |                       ^
   |                       pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E040] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:13:23 ---------------------------------------------------
13 |      case List(1, _*3:) =>  // error // error
   |                       ^
   |                       an identifier expected, but ')' found
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:15:18 ---------------------------------------------------
15 |      case List(x*, 1) => // error: pattern expected
   |                  ^
   |                  pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E031] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:17:18 ---------------------------------------------------
17 |      case (1, x: _*) => // error: bad use of _* (sequence pattern not allowed)
   |                  ^
   |                  * can be used only for last argument
   |
   | longer explanation available when compiling with `-explain`
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:23:17 ---------------------------------------------------
23 |    val K(ns @ _*, xx) = k // error: pattern expected
   |                 ^
   |                 pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E161] Naming Error: tests/neg/t5702-neg-bad-and-wild.scala:24:10 ---------------------------------------------------
24 |    val K(x) = k // error: x is already defined as value x
   |    ^^^^^^^^^^^^
   |    x is already defined as value x
   |
   |    Note that overloaded methods must all be defined in the same group of toplevel definitions
-- [E127] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:12:20 ---------------------------------------------------
12 |      case List(1, _*3,) => // error: pattern expected // error
   |                    ^
   |                  * cannot be used as an extractor in a pattern because it lacks an unapply or unapplySeq method
   |
   | longer explanation available when compiling with `-explain`
-- [E127] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:13:20 ---------------------------------------------------
13 |      case List(1, _*3:) =>  // error // error
   |                    ^
   |                  * cannot be used as an extractor in a pattern because it lacks an unapply or unapplySeq method
   |
   | longer explanation available when compiling with `-explain`
